<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#646464"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/Texto_Tela_Main_Titulo"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewContexto"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/Texto_Tela_Main_Introducao"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />

        <TextView
            android:id="@+id/textViewInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/Texto_Tela_Main_Titulo2"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintBottom_toTopOf="@+id/buttonTeste1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewContexto"
            app:layout_constraintVertical_bias="0.363" />

        <Button
            android:id="@+id/buttonTeste1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#AD493838"
            android:text="@string/button_teste_1"
            app:layout_constraintBottom_toTopOf="@+id/buttonTeste2"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonTeste2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#AD493838"
            android:text="@string/button_teste_2"
            app:layout_constraintBottom_toTopOf="@+id/buttonTeste3"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonTeste3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="#AD493838"
            android:text="@string/button_teste_3"
            app:layout_constraintBottom_toTopOf="@+id/buttonVerificar"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonVerificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="#7900C12A"
            android:text="@string/button_verificar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewResposta1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:hint="@string/text_view_resposta_1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background"
            app:layout_constraintBottom_toBottomOf="@+id/buttonTeste1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonTeste1"
            app:layout_constraintTop_toTopOf="@+id/buttonTeste1"
            app:layout_constraintVertical_bias="0.31" />

        <TextView
            android:id="@+id/textViewResposta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:hint="@string/text_view_resposta_2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background"
            app:layout_constraintBottom_toBottomOf="@+id/buttonTeste2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonTeste2"
            app:layout_constraintTop_toTopOf="@+id/buttonTeste2"
            app:layout_constraintVertical_bias="0.551" />

        <TextView
            android:id="@+id/textViewResposta3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:hint="@string/text_view_resposta_3"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background"
            app:layout_constraintBottom_toBottomOf="@+id/buttonTeste3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonTeste3"
            app:layout_constraintTop_toTopOf="@+id/buttonTeste3"
            app:layout_constraintVertical_bias="0.482" />

        <TextView
            android:id="@+id/textViewResultadoFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:hint="@string/text_view_resultado_do_teste"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background"
            app:layout_constraintBottom_toBottomOf="@+id/buttonVerificar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonVerificar"
            app:layout_constraintTop_toTopOf="@+id/buttonVerificar"
            app:layout_constraintVertical_bias="0.482" />

        <TextView
            android:id="@+id/textViewSuasRespostas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="30dp"
            android:text="@string/text_view_suas_respostas"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintBottom_toTopOf="@+id/textViewResposta1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInicio" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>